# osmfast

./: API_DOCUMENTATION.md  MANIFEST.in  README.md  bikeability_map.html  check_doc_coverage.py  extract_amenities.py  extract_amenities_detailed.py  extract_cycling.py  extract_network.py  extract_roads_geometry.py  extract_traffic_safety.py  generate_docs.py  osmfast.py  osmfast_gui.py  osmfast_original.py  osmstats.py  osmstats_original.py  pyproject.toml  sydney_tunnels_only_lines.dbf  sydney_tunnels_only_lines.shp
docs/: getting-started.html  index.html
docs/commands/: address.html  alternatives.html  amenity.html  barrier.html  bbox.html  bikeability.html  bottleneck.html  boundary.html  buffer.html  buildings.html  catchment.html  centrality.html  centroid.html  clip.html  connectivity.html  convert.html  count.html  densify.html  detour-factor.html  directions.html  distance-matrix.html  education.html  emergency.html  extract.html  filter.html  food.html  gui.html  head.html  healthcare.html  historic.html  info.html  isochrone.html  join.html  landuse.html  leisure.html  lookup.html  merge.html  names.html  natural.html  nearby.html  (+30 more)
osm_core/: __init__.py  __main__.py  api.py
osm_core/cli/: __init__.py  __main__.py  docs_loader.py  main.py
osm_core/cli/commands/: __init__.py  address.py  alternatives.py  amenity.py  barrier.py  bbox.py  bikeability.py  bottleneck.py  boundary.py  buffer.py  buildings.py  catchment.py  centrality.py  centroid.py  clip.py  connectivity.py  convert.py  count.py  densify.py  detour_factor.py  directions.py  distance_matrix.py  education.py  emergency.py  extract.py  filter.py  food.py  head.py  healthcare.py  (+42 more)
osm_core/export/: __init__.py  base.py  csv_exporter.py  json_exporter.py  shapefile_exporter.py  xml_exporter.py
osm_core/extraction/: __init__.py  base.py  feature_extractor.py
osm_core/filters/: __init__.py  base.py  osm_filter.py  semantic_categories.py
osm_core/models/: __init__.py  elements.py  features.py  statistics.py
osm_core/parsing/: __init__.py  mmap_parser.py  pattern_cache.py
osm_core/rendering/: __init__.py  leaflet_renderer.py  pdf_renderer.py  png_renderer.py  styles.py  webgl_renderer.py
osm_core/utils/: __init__.py  geo_utils.py  multipolygon.py  xml_utils.py
osmfast.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: __init__.py  conftest.py  test_documentation.py
tests/cli/: test_core_commands.py  test_distance.py  test_edge_cases.py  test_network_analysis.py  test_network_command.py  test_routing.py  test_spatial_commands.py
tests/debug/: test_algorithm_bugs.py
tests/integration/: test_output_formats.py  test_real_workflows.py  test_routing_integration.py  test_stress.py
tests/performance/: test_performance.py
tests/regression/: __init__.py  test_oneway_bug.py
tests/unit/: __init__.py  test_algorithms.py  test_filters.py  test_geo_utils.py  test_merge.py  test_models.py  test_multipolygon.py  test_node_coordinates.py  test_parsing.py  test_relation_parsing.py  test_road_network.py  test_shapefile_exporter.py  test_xml_utils.py
(+76 files in other folders)
